Kubernetes/platform-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: alexanderkarpovich/platformservice:latest
          resources:
            limits:
              memory: 1024Mi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "1"
