Kubernetes/commandsservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commandsservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandsservice
  template:
    metadata:
      labels:
        app: commandsservice
    spec:
      containers:
        - name: commandsservice
          image: alexanderkarpovich/commandsservice:latest
          resources:
            limits:
              memory: 1024Mi
              cpu: "2"
            requests:
              memory: 512Mi
              cpu: "1"
---
# Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: commandsservice-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: commandsservice
  ports:
  - name: commandsservice
    protocol: TCP
    port: 80
    targetPort: 80
