Kubernetes/platformservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platformservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: alexanderkarpovich/platformservice:latest
---
# Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: platformservice-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
