Kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  # mss.com domain name should be bound to 127.0.0.1 in C:\Windows\System32\drivers\etc\hosts file
  - host: mss.com 
    http:
      paths:
      - pathType: Prefix
        path: "/api/platforms"
        backend:
          service:
            name: platformservice-clusterip-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/api/c/platforms"
        backend:
          service:
            name: commandsservice-clusterip-service
            port:
              number: 80
